docs: add link in 1.md

--- a/draft/1.人是为什么而活着.md
+++ b/draft/1.人是为什么而活着.md
@@ -5,14 +5,21 @@
 1. 我们都同时生活在两个世界里：一个是真实的世界，一个是我们自己以为真实的世界，却随着我们的心境不停改变着。
 2. 传说远古术士从侏罗纪开始修炼仙术。她的法力最鼎盛的时候，却忽然对一切感到厌倦。反而醉心于艺术创作，于是她倾尽全力，创造了真世的第一个幻想空间——山河社稷图，一个没有仙术的想象世界。据说女娲的余生都在这个没有仙术的世界中安然度过……
 ## 情节及对话
-## 02话
+### 02话
 大伟与老头交谈得知真相后，老头要把大伟弄回山河社稷图中，这时大伟回想起自己儿时，父亲离开时跟自己的交谈。
-
+```
 大伟在门前用手拉住父亲：“爸爸~不要走！你走了我跟妈妈怎么办？”
 父亲双手提着行李箱：“大伟，原谅爸爸~~但是我已经不想为任何人而活了！”
 继续说道：“你奶奶为了照顾久病的爷爷，幸苦地过了一生。爷爷为了能见到我成家立业的那天，痛苦的苟活着……我为了两老离家出去读书、结婚、生下你~之后又为你和你妈，而我……”
 父亲露出悲伤的表情：“人只能活一次啊~~到什么时候才能为自己而活呢？”
 大伟止不住的流泪：“可是………呜~~”
+```
 
 突然回到现实的大伟，做出了决定和回应：“可是…………就是因为人生只活一次！不管怎样，都不能后悔啊~”
-大伟沿着老头的手臂趴会来，询问怎样才能修复好他的世界。
+大伟沿着老头的手臂爬会来，询问怎样才能修复好他的世界。
+
+## 相关链接
+- [《山河社稷图》][url-shsjt]
+
+<!-- 相关链接 -->
+[url-shsjt]:http://ac.qq.com/Comic/comicInfo/id/460066
