refactor: rename title

--- a/draft/1.人是为了什么而活.md
+++ b/draft/1.人是为了什么而活.md
@@ -1,4 +1,4 @@
-# 人是为什么而活着
+# 人是为了什么而活
 ## 作品
 《山河社稷图》，作者月藏（孙天镛）
 ## 背景设定
@@ -17,6 +17,10 @@
 
 突然回到现实的大伟，做出了决定和回应：“可是…………就是因为人生只活一次！不管怎样，都不能后悔啊~”
 大伟沿着老头的手臂爬会来，询问怎样才能修复好他的世界。
+
+## 关于这个问题
+最后并不算是正面的回答了这个问题，现实就在那里，自己问下自己吧！
+
 
 ## 相关链接
 - [《山河社稷图》][url-shsjt]
