docs: add new content in 21.md

--- a/draft/1.人是为了什么而活.md
+++ b/draft/1.人是为了什么而活.md
@@ -21,8 +21,28 @@
 突然回到现实的大伟，做出了决定和回应：“可是…………就是因为人生只活一次！不管怎样，都不能后悔啊~”
 大伟沿着老头的手臂爬会来，询问怎样才能修复好他的世界。
 
+### 52-活着才是问题
+早上，吕四娘叫大伟起床，让他帮忙做早饭。在厨房里，大伟问了一个问题。
+
+> 大伟：“如果有一天，发生了一件很槽糕的意外，你和镇南君只有一个能活下来，你会怎么选择？”
+
+> 吕四娘一边烹饪，一边思考：“嗯？我想想~”
+
+> 吕四娘：“若是不考虑谁的得救机率比较高这种技术问题的话~ 应该是想办法让老爷活下来把~”
+
+> 大伟疑惑的问：“咦？为什么？”
+
+> 吕四娘：“【死】不是问题吧？问题是【活】呀~ 死不可怕，没有真正活过才可怕~”
+
+> 吕四娘：“人很奇怪，总要为了什么目的而活，梦想啦~ 家庭啦~ 什么有的没的。如果人活着不为了什么，就会像行尸走肉，活的迷惘又痛苦~”
+
+> 吕四娘：“所以，像我这么水一样的女人，当然是为了爱而活喽~”
+
+> 大伟：“是哦”
+
 ## 关于这个问题
-最后并不算是正面的回答了这个问题，现实就在那里，自己问下自己吧！
+在作品中提出了问题，同时从其它的角度，给出了思考和见解。每个人的答案可能都不一样，还是要自己问下自己！
+
 
 
 ## 相关链接
