style: format word show

--- a/draft/4.死亡的意义.md
+++ b/draft/4.死亡的意义.md
@@ -11,13 +11,13 @@
 ### 进击的巨人第三季Part2 第4话
 团长埃尔文·史密斯带领剩下的新兵骑马，向巨人冲去。出现了下面回忆的情节。
 
-> 新兵集合，眉头紧皱都很紧张，这时一位士兵呕吐跪倒在地上。
+*新兵集合，眉头紧皱都很紧张，这时一位士兵呕吐跪倒在地上。*
 
 > 埃尔文：就算待在这里，也只会死于飞来的碎石下而已，立刻着手准备！
 
 > 新兵甲：我们……现在……要去送死吗？
 
-> 站在其旁边的士兵侧目紧促的吸了一口气。
+*站在其旁边的士兵侧目紧促的吸了一口气。*
 
 > 埃尔文平静的回答：没错。
 
@@ -35,11 +35,11 @@
 
 > 埃尔文突然怒目大声到：不，不对。为那些士兵赋予生存意义的是我们。那些勇敢的死者，那些可怜的死者，能够悼念他们的，是身为生者的我们。我们将会在这死去，将意义托付给下一个生存者。这正是唯一一个，能够对抗这残酷世界的方法。
 
-> 场景回到众人向巨人冲去，团长埃尔文·史密斯冲在最前面。
+*场景回到众人向巨人冲去，团长埃尔文·史密斯冲在最前面。*
 
 > 埃尔文双目怒睁大声吼道：士兵们愤怒吧！士兵们高呼吧！士兵们战斗吧！
 
-> 迎面而来的飞石，迅速将几位士兵和几匹马砸的血肉模糊，埃尔文的声音戛然而止。
+*迎面而来的飞石，迅速将几位士兵和几匹马砸的血肉模糊，埃尔文的声音戛然而止。*
 
 ## 相关链接
 - [进击的巨人](https://zh.wikipedia.org/zh-cn/%E9%80%B2%E6%93%8A%E7%9A%84%E5%B7%A8%E4%BA%BA)
